--- a/po/hr.po
+++ b/po/hr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 09:27+0200\n"
 "PO-Revision-Date: 2011-04-16 18:13+0200\n"
 "Last-Translator: Krešimir Jozić <kjozic@gmail.com>\n"
 "Language-Team: Croatian <kde-i18n-doc@kde.org>\n"
@@ -26,7 +26,7 @@ msgstr ""
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr ""
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr ""
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -39,6 +39,9 @@ msgid "\t--description, -d <description>\tDescription for snapshots."
 msgstr ""
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
+msgstr ""
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
 msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
@@ -257,6 +260,10 @@ msgstr "%s '%s' nije pronađen."
 msgid "ACL error."
 msgstr "greška"
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr ""
 
@@ -414,6 +421,10 @@ msgstr "Opis"
 msgid "Detecting filesystem type failed."
 msgstr "Otvaranje datoteke '%s' nije uspjelo."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 #, fuzzy
 msgid "Empty configdata."
 msgstr "Nesipravan stil tablice %d."
@@ -442,6 +453,10 @@ msgstr ""
 #, fuzzy, c-format
 msgid "File '%s' not found."
 msgstr "'%s' nije pronađeno."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, fuzzy, c-format
 msgid "IO Error (%s)."
@@ -493,11 +508,19 @@ msgstr "Nesipravan stil tablice %d."
 msgid "Key"
 msgstr "Kenija"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Listing configs failed (%s)."
 msgstr "%s postavke nisu uspjele."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
+msgstr ""
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
 msgstr ""
 
 #, c-format
@@ -528,6 +551,10 @@ msgstr ""
 msgid "Opening file '%s' failed."
 msgstr "Otvaranje datoteke '%s' nije uspjelo."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr ""
 
@@ -546,9 +573,6 @@ msgstr "Ulazno/izlazna pogreška"
 
 #, c-format
 msgid "Quota failure (%s)."
-msgstr ""
-
-msgid "Running in non UTF-8 locale. Setup is unsupported."
 msgstr ""
 
 msgid "See 'man snapper' for further instructions."
@@ -570,6 +594,10 @@ msgid "Subvolume"
 msgstr ""
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
@@ -609,6 +637,9 @@ msgstr "Nepoznata vrsta."
 #, fuzzy, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Koristite cijeli broj od %d do %d"
+
+msgid "Used Space"
+msgstr ""
 
 #, fuzzy
 msgid "User"
