--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 09:27+0200\n"
 "PO-Revision-Date: 2013-10-04 18:20+0200\n"
 "Last-Translator: Olav Pettershagen <olpetter@bbnett.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
@@ -28,7 +28,8 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbil
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tOppryddingsalgoritme for øyeblikksbilde."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <kommando>\tKjør kommandoen og opprette før- og etter-øyeblikksbilder."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -43,6 +44,10 @@ msgstr "\t--description, -d <beskrivelse>\tBeskrivelse av øyeblikksbilde."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr ""
+
+#, fuzzy
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-filters\t\tDeaktiver filtre."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
@@ -266,6 +271,10 @@ msgstr "Øyeblikksbildet '%u' ikke funnet."
 msgid "ACL error."
 msgstr "Feil under oppretting"
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Rydde opp"
 
@@ -409,6 +418,10 @@ msgstr "Beskrivelse"
 msgid "Detecting filesystem type failed."
 msgstr "Registrering av filsystemtype mislyktes"
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 #, fuzzy
 msgid "Empty configdata."
 msgstr "Ugyldige oppsettdata."
@@ -439,6 +452,10 @@ msgstr "Mislyktes"
 #, c-format
 msgid "File '%s' not found."
 msgstr "Filen '%s' ikke funnet."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 # error box title
 #, fuzzy, c-format
@@ -488,11 +505,19 @@ msgstr "Ugyldige brukerdata."
 msgid "Key"
 msgstr "Nøkkel"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Oppsett kunne ikke vises (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
+msgstr ""
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
 msgstr ""
 
 #, c-format
@@ -522,6 +547,10 @@ msgstr "Ikke autorisert."
 msgid "Opening file '%s' failed."
 msgstr "Filen '%s' kunne ikke åpnes."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Etter #"
 
@@ -543,9 +572,6 @@ msgstr "Inn/ut-feil."
 msgid "Quota failure (%s)."
 msgstr "Mislyktes"
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr ""
-
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
 msgstr "Forsøk 'snapper --help' for mer informasjon."
@@ -565,6 +591,10 @@ msgid "Subvolume"
 msgstr "Undervolum"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
 msgstr ""
 
 msgid "Try 'snapper --help' for more information."
@@ -601,6 +631,9 @@ msgstr "Ukjent type for øyeblikksbilder."
 #, fuzzy, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Bruk et heltall fra %d til %d"
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Bruker"
@@ -665,9 +698,6 @@ msgstr "bruk: snapper [--globale valg] <kommando> [--kommandovalg] [kommandoargu
 
 #~ msgid "Unknown file."
 #~ msgstr "Ukjent fil."
-
-#~ msgid "\t--disable-filters\t\tDisable filters."
-#~ msgstr "\t--disable-filters\t\tDeaktiver filtre."
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Kommandoen mislyktes (%s). Loggen inneholder mer informasjon."
