--- a/po/pl.po
+++ b/po/pl.po
@@ -9,17 +9,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 09:27+0200\n"
 "PO-Revision-Date: 2018-04-26 14:31+0000\n"
 "Last-Translator: Ewelina Michalowska <ewelina.michalowska@stgambit.com>\n"
-"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>"
-"\n"
+"Language-Team: Polish <https://l10n.opensuse.org/projects/snapper/master/pl/>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 2.18\n"
 
 msgid "\t--all-configs, -a\t\tList snapshots from all accessible configs."
@@ -31,7 +29,8 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm kasowania starych zrzutów."
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tAlgorytm czyszczenia migawek."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <polecenie>\tWykonanie polecenia oraz utworzenie zrzutów typu pre i post."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -45,6 +44,10 @@ msgstr "\t--description, -d <opis>\tOpis migawek."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <polecenie>\t\tPolecenie służące do porównywania plików."
+
+#, fuzzy
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr "\t--disable-filters\t\tWyłącz filtry."
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opcje>\tDodatkowe opcje przekazywane do polecenia diff."
@@ -257,6 +260,10 @@ msgstr "(Migawka %d.)"
 msgid "ACL error."
 msgstr "Błąd ACL."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Wyczyszczono"
 
@@ -301,9 +308,7 @@ msgstr "Polecenie 'mount' wymaga co najmniej jednego argumentu."
 
 #, c-format
 msgid "Command 'rollback' cannot be used on a non-root subvolume %s."
-msgstr ""
-"Polecenia rollback nie można użyć w przypadku podwoluminu %s, ponieważ nie "
-"jest on podwoluminem głównym."
+msgstr "Polecenia rollback nie można użyć w przypadku podwoluminu %s, ponieważ nie jest on podwoluminem głównym."
 
 msgid "Command 'rollback' only available for btrfs."
 msgstr "Polecenie \"rollback\" jest dostępne tylko w systemie plików btrfs."
@@ -397,6 +402,10 @@ msgstr "Opis"
 msgid "Detecting filesystem type failed."
 msgstr "Wykrywanie systemu plików nie powiodło się."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 msgid "Empty configdata."
 msgstr "Puste dane konfiguracyjne."
 
@@ -423,6 +432,10 @@ msgstr "Niepowodzenie (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "Nie znaleziono pliku '%s'."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 #, c-format
 msgid "IO Error (%s)."
@@ -467,12 +480,20 @@ msgstr "Nieprawidłowe dane użytkownika."
 msgid "Key"
 msgstr "Klucz"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Wyświetlenie konfiguracji nie powiodło się (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Być może zapomniano ogranicznika \"..\" między numerami migawek."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 #, c-format
 msgid "Missing argument for command option '%s'."
@@ -501,6 +522,10 @@ msgstr "Brak uprawnień."
 msgid "Opening file '%s' failed."
 msgstr "Otwieranie pliku '%s' nie powiodło się."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Post #"
 
@@ -521,11 +546,6 @@ msgstr "Błąd przydziału (%s)."
 msgid "Quota failure (%s)."
 msgstr "Niepowodzenie przydziału (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr ""
-"W systemie są uruchomione ustawienia regionalne inne niż UTF-8. Instalacja "
-"jest nieobsługiwana."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "Dodatkowe instrukcje można uzyskać, wydając polecenie \"man snapper\"."
 
@@ -545,6 +565,10 @@ msgstr "Podwolumen"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Folder główny konfiguracji nie istnieje. Narzędzie snapper prawdopodobnie nie jest skonfigurowane."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Wypróbuj polecenie 'snapper --help', aby uzyskać więcej informacji."
@@ -580,6 +604,9 @@ msgstr "Nieznany rodzaj zrzutów."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Użyj liczby całkowitej z zakresu od %d do %d."
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Użytkownik"
@@ -635,6 +662,9 @@ msgstr "argumentu root można użyć tylko razem z parametrem no-dbus."
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [argumenty-polecenia]"
 
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "W systemie są uruchomione ustawienia regionalne inne niż UTF-8. Instalacja jest nieobsługiwana."
+
 #~ msgid "Command '%s' does not work without DBus."
 #~ msgstr "Polecenie '%s' działa bez systemu DBus."
 
@@ -643,9 +673,6 @@ msgstr "Użycie: snapper [--opcje-globalne] <polecenia> [--opcje-poleceń] [argu
 
 #~ msgid "Unknown file."
 #~ msgstr "Nieznany plik."
-
-#~ msgid "\t--disable-filters\t\tDisable filters."
-#~ msgstr "\t--disable-filters\t\tWyłącz filtry."
 
 #~ msgid "Command failed (%s). See log for more information."
 #~ msgstr "Polecenie (%s) nie powiodło się. Więcej informacji można znaleźć w dzienniku."
