--- a/po/sk.po
+++ b/po/sk.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-20 14:05+0200\n"
+"POT-Creation-Date: 2018-10-02 09:27+0200\n"
 "PO-Revision-Date: 2018-04-23 05:47+0000\n"
 "Last-Translator: Ferdinand Galko <galko.ferdinand@gmail.com>\n"
-"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>"
-"\n"
+"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +28,8 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tUpratovací algoritmus pre snímku."
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\t\tUpratovací algoritmus pre snímky."
 
-msgid "\t--command <command>\tRun command and create pre and post snapshots."
+#, fuzzy
+msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
 msgstr "\t--command <príkaz>\tSpustí príkaz a vytvorí snímky pred a po snímky."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
@@ -43,6 +43,9 @@ msgstr "\t--description, -d <popis>\tPopis pre snímky."
 
 msgid "\t--diff-cmd <command>\t\tCommand used for comparing files."
 msgstr "\t--diff-cmd <command>\tPríkaz slúži na porovnávanie súborov."
+
+msgid "\t--disable-used-space\t\tDisable showing used space."
+msgstr ""
 
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <voľby>\tĎalšie voľby odovzdané príkazu diff."
@@ -255,6 +258,10 @@ msgstr "(Snímka %d.)"
 msgid "ACL error."
 msgstr "ACL chyba."
 
+#. TRANSLATORS: symbol for "bytes" (best keep untranslated)
+msgid "B"
+msgstr ""
+
 msgid "Cleanup"
 msgstr "Upratovanie"
 
@@ -393,6 +400,10 @@ msgstr "Popis"
 msgid "Detecting filesystem type failed."
 msgstr "Detekcia typu súborového systému zlyhala."
 
+#. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
+msgid "EiB"
+msgstr ""
+
 msgid "Empty configdata."
 msgstr "Prázdne konfiguračné údaje."
 
@@ -420,6 +431,10 @@ msgstr "Zlyhanie  (%s)."
 #, c-format
 msgid "File '%s' not found."
 msgstr "Súbor '%s' nebol nájdený."
+
+#. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
+msgid "GiB"
+msgstr ""
 
 # error box title
 #, c-format
@@ -467,6 +482,10 @@ msgstr "Neplatné používateľské údaje."
 msgid "Key"
 msgstr "Kľúč"
 
+#. TRANSLATORS: symbol for "kibi bytes" (best keep untranslated)
+msgid "KiB"
+msgstr ""
+
 # %s is either BOOTP or DHCP
 #, c-format
 msgid "Listing configs failed (%s)."
@@ -474,6 +493,10 @@ msgstr "Výpis konfigurácií zlyhal (%s)."
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Možno, že ste zabudli oddeľovač '..' medzi číslami snímok."
+
+#. TRANSLATORS: symbol for "mebi bytes" (best keep untranslated)
+msgid "MiB"
+msgstr ""
 
 #, c-format
 msgid "Missing argument for command option '%s'."
@@ -502,6 +525,10 @@ msgstr "Žiadne práva."
 msgid "Opening file '%s' failed."
 msgstr "Otvorenie súboru '%s' zlyhalo."
 
+#. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
+msgid "PiB"
+msgstr ""
+
 msgid "Post #"
 msgstr "Po #"
 
@@ -523,9 +550,6 @@ msgstr "Chyba kvóty (%s)."
 msgid "Quota failure (%s)."
 msgstr "Zlyhanie kvóty (%s)."
 
-msgid "Running in non UTF-8 locale. Setup is unsupported."
-msgstr "Beh v lokalizácii, ktorá nie je UTF-8. Nastavenie nie je podporované."
-
 msgid "See 'man snapper' for further instructions."
 msgstr "Viac informácií nájdete na 'man snapper'."
 
@@ -545,6 +569,10 @@ msgstr "Podzväzok"
 
 msgid "The config 'root' does not exist. Likely snapper is not configured."
 msgstr "Konfigurácia 'root' neexistuje. Pravdepodobne nie je snapper nakonfigurovaný."
+
+#. TRANSLATORS: symbol for "tebi bytes" (best keep untranslated)
+msgid "TiB"
+msgstr ""
 
 msgid "Try 'snapper --help' for more information."
 msgstr "Skúste 'snapper --help' pre viac informácií."
@@ -580,6 +608,9 @@ msgstr "Neznámy typ snímok."
 #, c-format
 msgid "Use an integer number from %d to %d."
 msgstr "Použite celé číslo od %d do %d."
+
+msgid "Used Space"
+msgstr ""
 
 msgid "User"
 msgstr "Používateľ"
@@ -634,6 +665,9 @@ msgstr "Argument root možno použiť len spoločne s no-dbus."
 
 msgid "usage: snapper [--global-options] <command> [--command-options] [command-arguments]"
 msgstr "použitie: snapper [--globálne-voľby] <príkaz> [--voľby-príkazu] [argumenty-príkazu]"
+
+#~ msgid "Running in non UTF-8 locale. Setup is unsupported."
+#~ msgstr "Beh v lokalizácii, ktorá nie je UTF-8. Nastavenie nie je podporované."
 
 #~ msgid "Command '%s' does not work without DBus."
 #~ msgstr "Príkaz '%s' nefunguje bez DBus."
